--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,18 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
+    "http-status-codes": "^1.4.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.0",
+    "morgan": "^1.9.1",
     "rand-token": "^0.4.0"
   },
   "devDependencies": {
