--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "http-methods-constants": "^1.0.0",
     "http-status-codes": "^1.4.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
